<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/regular">

    <include
        android:id="@+id/adminToolbar"
        layout="@layout/admin_lesson_toolbar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fileNameTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/huge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/file_name" />

    <TextView
        style="@style/AdminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large"
        android:text="@string/quote" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/quoteEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/huge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/quote_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/authorEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/huge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/author" />

    <include
        android:id="@+id/controls"
        layout="@layout/admin_control_buttons" />

</LinearLayout>
